# djangocms-versioning

./: .babelrc  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .python-version  AGENTS.md  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.rst  addon.json  babel.config.js  eslint.config.js  gulpfile.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  setup.cfg  setup.py  test_settings.py  tox.ini  webpack.config.js
.circleci/: Dockerfile  config.yml
.github/workflows/: codeql.yml  docs.yml  frontend.yml  lint.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml  test.yml
.pytest_cache/v/cache/: lastfailed
.tx/: config  transifex.yaml
djangocms_versioning/: __init__.py  admin.py  apps.py  cms_config.py  cms_menus.py  cms_toolbars.py  compat.py  conditions.py  conf.py  constants.py  datastructures.py  emails.py  exceptions.py  fields.py  forms.py  handlers.py  helpers.py  indicators.py  managers.py  models.py  monkeypatch.py  operations.py  plugin_rendering.py  signals.py  versionable.py  versionables.py
djangocms_versioning/admin/: __init__.py  pageadmin.py  versioning.py
djangocms_versioning/locale/ar/LC_MESSAGES/: django.mo  django.po
djangocms_versioning/locale/bn/LC_MESSAGES/: django.mo  django.po
djangocms_versioning/locale/de/LC_MESSAGES/: django.mo  django.po
djangocms_versioning/locale/en/LC_MESSAGES/: django.po
djangocms_versioning/locale/fi/LC_MESSAGES/: django.mo  django.po
djangocms_versioning/locale/fr/LC_MESSAGES/: django.mo  django.po
djangocms_versioning/locale/hi/LC_MESSAGES/: django.mo  django.po
djangocms_versioning/locale/id/LC_MESSAGES/: django.mo  django.po
djangocms_versioning/locale/ko/LC_MESSAGES/: django.mo  django.po
djangocms_versioning/locale/nl/LC_MESSAGES/: django.mo  django.po
djangocms_versioning/locale/ru/LC_MESSAGES/: django.mo  django.po
djangocms_versioning/locale/sq/LC_MESSAGES/: django.mo  django.po
djangocms_versioning/locale/vi/LC_MESSAGES/: django.mo  django.po
djangocms_versioning/management/commands/: create_versions.py
djangocms_versioning/migrations/: 0001_initial.py  0002_delete_campaign.py  0003_version.py  0004_auto_20180727_1715.py  0004_auto_20180730_1135.py  0004_auto_20180803_1340.py  0005_remove_version_label.py  0006_auto_20180809_1714.py  0006_auto_20180813_1407.py  0007_auto_20180813_1407.py  0008_auto_20180820_1754.py  0009_cms_pagecontent_remove_unique_constraint.py  0010_version_proxies.py  0011_auto_20180919_1514.py  0011_version_number.py  0012_create_version_numbers.py  0013_auto_20181005_1404.py  0014_version_source.py  0015_version_modified.py  0016_alter_statetracking_id_alter_version_id.py  0016_alter_version_content_type.py  0016_auto_20230505_0934.py  0016_version_locked_by.py  0017_merge_20230514_1027.py  0018_fix_typo.py  0018_version_visibility_end_version_visibility_start.py
djangocms_versioning/monkeypatch/: __init__.py  admin.py  checks.py  cms_toolbars.py  extensions.py  indicators.py  menu.py  page.py  templatetags.py  toolbar.py  wizard.py
djangocms_versioning/templatetags/: djangocms_versioning.py
djangocms_versioning/test_utils/: factories.py  test_helpers.py
djangocms_versioning/test_utils/blogpost/: admin.py  apps.py  cms_config.py  models.py
djangocms_versioning/test_utils/extended_polls/: admin.py  models.py
djangocms_versioning/test_utils/extensions/: models.py
djangocms_versioning/test_utils/incorrectly_configured_blogpost/: admin.py  apps.py  cms_config.py  models.py
djangocms_versioning/test_utils/non_configured/: models.py
djangocms_versioning/test_utils/people/: models.py
djangocms_versioning/test_utils/polls/: admin.py  cms_config.py  cms_plugins.py  cms_wizards.py  forms.py  models.py  views.py
djangocms_versioning/test_utils/relationships/: cms_config.py  models.py
djangocms_versioning/test_utils/text/: cms_plugins.py  models.py
djangocms_versioning/test_utils/unversioned_editable_app/: admin.py  cms_config.py  models.py  urls.py  views.py
docs/: Makefile  admin_architecture.rst  advanced_configuration.rst  basic_concepts.rst  conf.py  customizing_version_list.md  customizing_version_list.rst  index.rst  permissions.rst  requirements.txt  settings.rst  signals.md  signals.rst  version_locking.rst  versioning_integration.md  versioning_integration.rst
docs/api/: advanced_configuration.rst  contract.rst  management_commands.rst  managers.rst  models.rst  settings.rst  signals.rst
docs/explanations/: admin_options.rst  basic_concepts.rst
docs/howto/: admin_options.rst  configuration.rst  permissions.rst  react_to_version_changes.rst  working_with_pages.rst
docs/introduction/: basic_concepts.rst  versioning_integration.rst  working_with_pages.rst
docs/tutorials/: versioning_a_blog.rst
docs/upgrade/: 2.0.0.rst  2.4.0.rst  2.5.0.rst  2.6.0.rst
tests/: __init__.py  requirements.txt  settings.py  test_0_migrations.py  test_admin.py  test_admin_using_versioning.py  test_automatic_version_generation.py  test_checks.py  test_cms_config.py  test_conditions.py  test_content_models.py  test_datastructures.py  test_deletion_settings.py  test_extensions.py  test_forms.py  test_handlers.py  test_helpers.py  test_indicators.py  test_integration_with_core.py  test_locking.py  test_management_commands.py  test_managers.py  test_menus.py  test_models.py  test_monkeypatch.py  test_permissions.py  test_plugin_rendering.py  test_settings.py  test_signals.py  test_states.py  test_toolbars.py  test_version_list.py  test_versionables.py  test_views.py  urls.py
tests/e2e/: versioning.behavior.spec.js  versioning.more.spec.js  versioning.spec.js
tests/e2e/fixtures/: host.html  versioning.html  versioning.no-match.html  versioning.q.html  versioning.v1-only.html
tests/requirements/: dj11_cms40.txt  dj22_cms40.txt  dj32_cms41.txt  dj40_cms41.txt  dj41_cms40.txt  dj41_cms41.txt  dj42_cms40.txt  dj42_cms41.txt  dj42_cms_develop.txt  dj50_cms41.txt  dj51_cms41.txt  dj52_cms41.txt  dj52_cms50.txt  dj60_cms50.txt  dj61_cms50.txt  django_22.txt  django_32.txt  requirements_base.txt  requirements_dev.txt
(+84 files in other folders)
